# tap-salesforce-meltano-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
doc/: configuration.md  development.md  releasing.md
tap_salesforce/: __init__.py  __main__.py  auth.py  exceptions.py  tap.py
tap_salesforce/auth/: __init__.py  authenticator.py
tap_salesforce/clients/: base.py  bulk.py  bulk2.py  rest.py
tap_salesforce/schemas/: __init__.py  discovery.py  salesforce_types.py
tap_salesforce/streams/: __init__.py  base.py  bulk.py  bulk2.py  chunking.py  rest.py
tests/: __init__.py
tests/integration/: conftest.py  test_bulk.py  test_core.py  test_rest.py
tests/unit/: conftest.py  test_auth.py  test_client.py  test_streams.py
